<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.HomeFragment"
    tools:openDrawer="start">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent">

                    <ImageView
                        android:id="@+id/nav_image"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:contentDescription="@string/imageTODO"
                        android:src="@drawable/menu"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold|normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.45"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="#FAFAFA"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolBar"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/searchHintTv"
                    android:textColorHint="#F4F4F4" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/categoriesTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoriesRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="@id/categoriesTv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoriesTv"
                app:spanCount="3"
                tools:listitem="@layout/categories_item" />

            <ProgressBar
                android:id="@+id/progress_category_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/categoriesRV"
                app:layout_constraintLeft_toLeftOf="@id/categoriesRV"
                app:layout_constraintRight_toRightOf="@id/categoriesRV"
                app:layout_constraintTop_toTopOf="@id/categoriesRV" />

            <TextView
                android:id="@+id/trendingBooksTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/trendingBook"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoriesRV" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trendingBooksRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="@id/trendingBooksTv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trendingBooksTv"
                tools:ignore="RtlSymmetry"
                tools:listitem="@layout/trending_item" />

            <ProgressBar
                android:id="@+id/progress_trending_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/trendingBooksRV"
                app:layout_constraintLeft_toLeftOf="@id/trendingBooksRV"
                app:layout_constraintRight_toRightOf="@id/trendingBooksRV"
                app:layout_constraintTop_toTopOf="@id/trendingBooksRV" />

            <TextView
                android:id="@+id/topAuthorsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Categories book"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                app:layout_constraintHorizontal_bias=".1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trendingBooksRV" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topAuthorsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topAuthorsTv"
                tools:listitem="@layout/trending_item" />

            <ProgressBar
                android:id="@+id/progress_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/topAuthorsRV"
                app:layout_constraintLeft_toLeftOf="@id/topAuthorsRV"
                app:layout_constraintRight_toRightOf="@id/topAuthorsRV"
                app:layout_constraintTop_toTopOf="@id/topAuthorsRV" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_book_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@id/searchLayout"
                tools:listitem="@layout/trending_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />

</androidx.drawerlayout.widget.DrawerLayout>